# herxheim2018

./: .travis.yml  LICENSE  Makefile  Procfile  README.md  herxheim2018.cabal  stack.yaml
app/: Main.hs
src/: Db.hs  Form.hs  Html.hs  Lib.hs  RegistrationsTable.hs  Types.hs  Util.hs
test/: Spec.hs
